# tabplotlib

./: README.md  pyproject.toml  requirements.txt
examples/: basic.py  switch_between_figs.py
src/: tabplotlib.py
