[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tabplotlib.py"]

[project]
name = "tabplotlib"
version = "0.0.1"
authors = [
  { name="crnicavic", email="cavic5000@tutanota.com" },
]
description = "matplotlib wrapper for tkinter tabs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "matplotlib"
]
